--- a/introduce/introduce/templates/base.html
+++ b/introduce/introduce/templates/base.html
@@ -27,9 +27,9 @@
        padding-bottom:100px;/* footer height */
     }
     .footer {
-       width:127%;
+       width:100%;
        height:100px;
-       position:absolute;
+       position:fixed;
        bottom:0;
        background:#464646;
       text-align: center;
@@ -48,17 +48,17 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Kim-HongIn</a>
+            <a class="navbar-brand" href="{% url 'main' %}">Kim-HongIn</a>
           </div>
       
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="{% url 'hobby' %}">취미 <span class="sr-only">(current)</span></a></li>
-              <li><a href="#">장소</a></li>
-              <li><a href="#">음악</a></li>
-              <li><a href="#">사진</a></li>
-              <li><a href="#">일기</a></li>
+              <li><a href="{% url 'hobby' %}">취미</a></li>
+              <li><a href="{% url 'place' %}">장소</a></li>
+              <li><a href="{% url 'music' %}">음악</a></li>
+              <li><a href="{% url 'picture' %}">사진</a></li>
+              <li><a href="{% url 'diary' %}">일기</a></li>
               <li><a href="#">Other things</a></li>
             </ul>
             
@@ -66,9 +66,11 @@
         </div><!-- /.container-fluid -->
       </nav>
 
+      {% block contents %}
 
+      {% endblock %}
 
-      <div class="container contents-wrap">
+      <!-- <div class="container contents-wrap">
         <sitemesh:write property='body' />
         <footer class="footer">
             <br>
@@ -77,7 +79,7 @@
              <div>2021년 7월 29일 제작 완료</div>
              <div>문의 : ghddls00@naver.com</div>
         </footer>
-  </div>
+      </div> -->
   <script type="text/javascript"  src="/resources/js/common.js"></script>
 
 </body>
