--- a/introduce/self_introduce/templates/music.html
+++ b/introduce/self_introduce/templates/music.html
@@ -1,1 +1,54 @@
-좋아하는 음악
+<head>
+    <style>
+        .contents {
+            padding-left: 10rem;
+            /* background-color: bisque; */
+            margin: 4rem;
+        }
+
+        div.left {
+        width: 50%;
+        float: left;
+        box-sizing: border-box;
+        /* background: #8977ad; */
+        }
+        div.right {
+        width: 50%;
+        float: right;
+        box-sizing: border-box;
+        /* background: #ece6cc; */
+        }
+    </style>
+</head>
+
+{% extends 'base.html' %}
+
+{% block contents %}
+<body>
+ <div class="contents">
+    <div class="left">
+        <strong>안예은 [가자]</strong> <br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/nlsZUwIs-FA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <br><br><br>
+        <strong>스텔라장 [빌런]</strong><br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ghpn99s8I-U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <br><br><br>
+        <strong>다린 [Rubato]</strong><br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/p4HIqRLfRcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    
+        
+    </div>
+    <div class="right">
+        <strong>김수영 [비워내려고 합니다]</strong> <br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/He3Bv4HxMsk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <br><br><br>
+        <strong>선우정아 [도망가자]</strong> <br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/0q6DR6EiPPo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <br><br><br>
+        <strong>자우림 [스물다섯 스물하나]</strong> <br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/qvJ1FHRR1n8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    </div>
+ </div>
+
+
+</body>
+{% endblock %}
