--- a/introduce/self_introduce/templates/place.html
+++ b/introduce/self_introduce/templates/place.html
@@ -21,7 +21,7 @@
                  <div style = "height:100%"><img src = "{% static '장소4.jpg' %}" width="600px" height="400px"></div>
                 </td>
                 <td>
-                 <span style = "font-size : 15px;">안녕하세요</span>
+                 <span style = "font-size : 15px;"><strong>다니던 중학교 운동장</strong><br><br>중학교 고등학교가 붙어있는 곳을 다녔는데, 운동장에 대한 추억이 많아서 좋아하는 장소예요. <br>운동장에서 뛰어 놀기도 하고 땅따먹기도 하면서 즐거운 시간을 보냈었습니다.</span>
                 </td>
             </tr>
             <tr>
@@ -29,7 +29,7 @@
                  <div style = "height:100%"><img src = "{% static '장소5.jpg' %}" width="600px" height="400px"></div>
                 </td>
                 <td>
-                 <span style = "font-size : 15px;">안녕하세요</span>
+                 <span style = "font-size : 15px;"><strong>치치</strong><br><br>좋아하는 장소, 제 단골 술집인 '치치'입니다. 성신 수캠 근처에 있는 술집인데, 동기들이랑 자주 갔어요.<br>하이볼이 맛있고 안주가 정말 정말 맛있습니다. 매운크림떡볶이 추천</span>
                 </td>
             </tr>
             <tr>
@@ -37,7 +37,7 @@
                  <div style = "height:100%"><img src = "{% static '장소6.jpg' %}" width="600px" height="400px"></div>
                 </td>
                 <td>
-                 <span style = "font-size : 15px;">안녕하세요</span>
+                 <span style = "font-size : 15px;"><strong>성신 잔디밭</strong><br><br>잔디밭에서 친구들과 배드민턴도 하고 배구도 하고 러닝도 했는데 정말 즐거웠습니다.<br>배구 하겠다고 휴대용 네트까지 따로 구매해서 이고 다닐 정도로 진심이었습니다...</span>
                 </td>
             </tr>
             <tr>
@@ -45,7 +45,7 @@
                  <div style = "height:100%"><img src = "{% static '장소7.jpg' %}" width="600px" height="400px"></div>
                 </td>
                 <td>
-                 <span style = "font-size : 15px;">안녕하세요</span>
+                 <span style = "font-size : 15px;"><strong>성북천</strong><br><br>성북천에서 자주 자전거를 타며 출사를 가곤 했습니다. 산책도 자주 나갔어요. <br>러닝 메이트들과 성북천 러닝을 하고 나면 몸이 가볍고 정말 상쾌했습니다~!</span>
                 </td>
             </tr>
         </table>
